# untappd-miner

./: .gitignore  README.md  pyproject.toml
tests/: test_untappd_miner.py  test_untappedwebminer.py
untappd_miner/: __init__.py  untappd_miner.py
