[tool.poetry]
name = "untappd-miner"
version = "0.1.0"
description = ""
authors = ["simlal <simlalonde@hotmail.com>"]
readme = "README.md"
exclude = [".venv"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
