[tool.poetry]
name = "untappd-miner"
version = "0.1.0"
description = ""
authors = ["simlal <simlalonde@hotmail.com>"]
readme = "README.md"
exclude = [".venv"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
